add example to retrieve all edges
Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/3.go.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/3.go.md
@@ -152,6 +152,26 @@ nebula> GO FROM "player100", "player102" OVER serve \
 +-----------------+------------+---------------------+
 ```
 
+### To query all edges
+
+Case: To query all edges that are connected to the starting vertex.
+
+```ngql
+# Return all edges that are connected to the player102 vertex.
+nebula> GO FROM "player102" OVER * BIDIRECT YIELD edge AS e;
++-----------------------------------------------------------------------+
+| e                                                                     |
++-----------------------------------------------------------------------+
+| [:follow "player101"->"player102" @0 {degree: 90}]                    |
+| [:follow "player103"->"player102" @0 {degree: 70}]                    |
+| [:follow "player135"->"player102" @0 {degree: 80}]                    |
+| [:follow "player102"->"player100" @0 {degree: 75}]                    |
+| [:follow "player102"->"player101" @0 {degree: 75}]                    |
+| [:serve "player102"->"team203" @0 {end_year: 2015, start_year: 2006}] |
+| [:serve "player102"->"team204" @0 {end_year: 2019, start_year: 2015}] |
++-----------------------------------------------------------------------+
+```
+
 ### To query multiple edge types
 
 Case: To query multiple edge types that are connected to the starting vertex. You can specify multiple edge types or the `*` symbol to query multiple edge types.
