--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -147,11 +147,11 @@ MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
 
 ```ngql
 FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
-     ──┬─────            ───────────┬─────────── ───┬───      ────┬────
-       │           ┌────────────────┘               │             │ 
-       │           │     ┌──────────────────────────┘             │
+     ──┬─────            ───────────┬────────── ───┬───      ────┬────
+       │           ┌────────────────┘          　   │　           │
+       │           │     ┌─────────────────────────┘             │
        │           │     │                                        │
-       │           │     └───────── 经由所有类型的边出向探索        　 └────　返回路径为 p 列
+       │           │     └───────── 经由所有类型的边出向探索         └─────　返回路径为 p 列
        │           │                                              
        │           └─────────────── 从给定的起点、终点 VID           
        │                                                   
