--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/3.go.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/3.go.md
@@ -146,6 +146,26 @@ nebula> GO FROM "player100", "player102" OVER serve \
 +-----------------+------------+---------------------+
 ```
 
+### 查询所有边
+
+场景：查询起始点关联的所有边。
+
+```ngql
+# 返回 player102 关联的所有边。
+nebula> GO FROM "player102" OVER * BIDIRECT YIELD edge AS e;
++-----------------------------------------------------------------------+
+| e                                                                     |
++-----------------------------------------------------------------------+
+| [:follow "player101"->"player102" @0 {degree: 90}]                    |
+| [:follow "player103"->"player102" @0 {degree: 70}]                    |
+| [:follow "player135"->"player102" @0 {degree: 80}]                    |
+| [:follow "player102"->"player100" @0 {degree: 75}]                    |
+| [:follow "player102"->"player101" @0 {degree: 75}]                    |
+| [:serve "player102"->"team203" @0 {end_year: 2015, start_year: 2006}] |
+| [:serve "player102"->"team204" @0 {end_year: 2019, start_year: 2015}] |
++-----------------------------------------------------------------------+
+```
+
 ### 查询多个 Edge type
 
 场景：查询起始点关联的多个边类型可以通过设置多个Edge Type实现，也可以通过设置`*`关联所有的边类型。
