--- a/docs-2.0-zh/3.ngql-guide/9.space-statements/1.create-space.md
+++ b/docs-2.0-zh/3.ngql-guide/9.space-statements/1.create-space.md
@@ -23,7 +23,7 @@ CREATE SPACE [IF NOT EXISTS] <graph_space_name> (
 |参数|说明|
 |:---|:---|
 |`IF NOT EXISTS`|检测待创建的图空间是否存在，只有不存在时，才会创建图空间。仅检测图空间的名称，不会检测具体属性。|
-|`<graph_space_name>`|1、在{{nebula.name}}实例中唯一标识一个图空间。<br/>2、图空间名称设置后无法被修改。<br/>3、默认情况下，仅支持 1~4 字节的 UTF-8 编码字符，包括英文字母（区分大小写）、数字、中文等，但是特殊字符只能使用下划线。不能以数字开头。<br>4、如果需要使用特殊字符、保留关键字或者以数字开头，请使用反引号（\`）包围整个名称。反引号中不能包含英文句号（`.`）。详情参见[关键字和保留字](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md)。<br/>**注意**：如果以中文为图空间命名，报`SyntaxError`错误时，需使用反引号（\`）包围中文字符。|
+|`<graph_space_name>`|1、在{{nebula.name}}实例中唯一标识一个图空间。<br/>2、图空间名称设置后无法被修改。<br/>3、默认情况下，仅支持 1~4 字节的 UTF-8 编码字符，包括英文字母（区分大小写）、数字、中文等。不能包含下划线（_）以外的特殊字符，且不能以数字开头。<br>4、如果需要使用特殊字符、保留关键字或者以数字开头，请使用反引号（\`）包围整个名称。反引号中不能包含英文句号（`.`）。详情参见[关键字和保留字](../../3.ngql-guide/1.nGQL-overview/keywords-and-reserved-words.md)。<br/>**注意**：如果以中文为图空间命名，报`SyntaxError`错误时，需使用反引号（\`）包围中文字符。|
 |`partition_num`|指定图空间的分片数量。建议设置为集群中硬盘数量的 20 倍（HDD 硬盘建议为 2 倍）。例如集群中有 3 个硬盘，建议设置 60 个分片。默认值为 10。|
 |`replica_factor`|指定每个分片的副本数量。建议在生产环境中设置为 3，在测试环境中设置为 1。由于需要基于多数表决，副本数量必须是**奇数**。默认值为 1。|
 |`vid_type`|必选参数。指定点 ID 的数据类型。可选值为`FIXED_STRING(<N>)`和`INT64`。`INT`等同于`INT64`。<br>`FIXED_STRING(<N>)`表示数据类型为定长字符串，长度为`N`字节，超出长度会报错。例如，UTF-8中，一个中文字符的长度为三个字节，如果设置`N`为 12，那么`vid_type`为最多 4 个中文字符。<br>`INT64`表示数据类型为整数。|
