fix line display
Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -38,14 +38,14 @@ The primary query statements in NebulaGraph fall into the following categories:
 
 ```ngql
 FETCH PROP ON player "player100" YIELD properties(vertex);
-              ──┬───  ────┬─────       ─────────┬──────── 
-                │         │         ┌───────────┘         
-                │         │         │                     
-                │         │         └─────── Returns all properties under the player tag of the vertex.
-                │         │                               
-                │         └───────────────── Retrieves from the vertex "player100".
-                │                                         
-                └─────────────────────────── Retrieves properties under the player tag.
+              --+---  ----+-----       -------+----------
+                |         |                   |
+                |         |                   |
+                |         |                   +--------- Returns all properties under the player tag of the vertex.
+                |         |
+                |         +----------------- Retrieves from the vertex "player100".
+                |
+                +--------------------------- Retrieves properties under the player tag.
 ```
 
 For more information, see [FETCH PROP ON](4.fetch.md).
@@ -65,14 +65,14 @@ For more information, see [FETCH PROP ON](4.fetch.md).
 
 ```ngql
 LOOKUP ON player WHERE player.name == "Tony Parker" YIELD id(vertex);
-          ──┬───  ──────┬──────────────────────────  ──┬──────       
-            │           │          ┌───────────────────┘             
-            │           │          │                                 
-            │           │          └──────────── Returns the VID of the found vertex.
-            │           │                                            
-            │           └─────────────────────── Filtering is based on the value of the property name.
-            │                                                        
-            └─────────────────────────────────── Queries based on the player tag.
+          --+--- ------------------+---------------       ---+------
+            |                      |                         |
+            |                      |                         |
+            |                      |                         +---- Returns the VID of the retrieved vertex.
+            |                      |
+            |                      +------------ Filtering is based on the value of the property name.
+            |
+            +----------------------------------- Queries based on the player tag.
 ```
 
 For more information, see [LOOKUP ON](5.lookup.md).
@@ -85,22 +85,22 @@ For more information, see [LOOKUP ON](5.lookup.md).
 **Note:**
 - Use [property reference symbols](../5.operators/5.property-reference.md) (`$^` and `$$`) to return properties of the starting or target vertices, e.g., `YIELD $^.player.name`.
 - Use the functions `properties($^)` and `properties($$)` to return all properties of the starting or target vertices. Specify property names in the function to return specific properties, e.g., `YIELD properties($^).name`.
-- Use the functions `src(edge)` and `dst(edge)` to return the starting or target vertex ID of an edge, e.g., `YIELD src(edge)`.
+- Use the functions `src(edge)` and `dst(edge)` to return the starting or destination vertex ID of an edge, e.g., `YIELD src(edge)`.
 
 **Example:**
 
 ```ngql
 GO 3 STEPS FROM "player102" OVER follow YIELD dst(edge);
-   ───┬───      ───┬───────      ─┬────       ──┬────── 
-      │            │              │   ┌─────────┘       
-      │            │              │   │                 
-      │            │              │   └── Returns the target vertex of the last edge
-      │            │              │                     
-      │            │              └────── Traverses out via the edge follow
-      │            │                                    
-      │            └───────────────────── Starts from "player102"
-      │                                                 
-      └────────────────────────────────── Traverses 3 steps
+-----+---       --+-------       -+----       ---+-----
+     |            |               |              |
+     |            |               |              |
+     |            |               |              +--------- Returns the destination vertex of the last hop.
+     |            |               |
+     |            |               +------ Traverses out via the edge follow.
+     |            |
+     |            +--------------------- Starts from "player102".
+     |
+     +---------------------------------- Traverses 3 steps.
 ```
 
 For more information, see [GO](3.go.md).
@@ -141,17 +141,17 @@ For more information, see [MATCH](2.match.md).
 
 ```ngql
 FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
-     ──┬─────            ───────────┬─────────── ───┬───      ────┬────
-       │           ┌────────────────┘               │             │ 
-       │           │     ┌──────────────────────────┘             │
-       │           │     │                                        │
-       │           │     └Travels outwards via all types of edges └────　Returns the path as 'p'
-       │           │                                              
-       │           └──────From the given starting and target VIDs            
-       │                                                   
-       │    
-       │                                                    
-       └──────────────────Retrieves the shortest path
+-------+-----           -------+---------------- ---+--       ----+----
+       |                       |                    |             |
+       |                       |                    |             |
+       |                       |                    |             +---------- Returns the path as 'p'.
+       |                       |                    |
+       |                       |                    +----------- Travels outwards via all types of edges.
+       |                       |    
+       |                       |
+       |                       +------------------ From the given starting and target VIDs.  
+       |
+       +--------------------------- Retrieves the shortest path.
 ```
 
 For more information, see [FIND PATH](6.find-path.md).
@@ -167,13 +167,13 @@ For more information, see [FIND PATH](6.find-path.md).
 **Example:**
 
 ```ngql
-GET SUBGRAPH 5 STEPS FROM "player101" YIELD VERTICES AS nodes, EDGES AS relationships;           
-             ───┬─── ─────┬──────────       ──────────────────────────┬──────────────── 
-                │         │                                           │
-                │         │                                           │
-                │         └─────── Starts from "player101"            └ Returns all vertices and edges
-                │                                 
-                └───────────────── Gets exploration of 5 steps
+GET SUBGRAPH 5 STEPS FROM "player101" YIELD VERTICES AS nodes, EDGES AS relationships;
+             -----+- -----+--------         ------------------------+----------------
+                  |       |                                         |
+                  |       |                                         |
+                  |       +------- Starts from "player101".         +------------ Returns all vertices and edges.
+                  |
+                  +----------------- Gets exploration of 5 steps     
                                                
 ```
 
