--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -38,14 +38,14 @@
 
 ```ngql
 FETCH PROP ON player "player100" YIELD properties(vertex);
-              ──┬───  ────┬─────       ─────────┬──────── 
-                │         │         ┌───────────┘         
-                │         │         │                     
-                │         │         └─────── 返回点的 player TAG 下所有属性
-                │         │                               
-                │         └───────────────── 从 "player100" 这个点获取
-                │                                         
-                └─────────────────────────── 获取 player 这个 TAG 下的属性
+              --+---  ----+-----       -------+----------
+                |         |                   |
+                |         |                   |
+                |         |                   +--------- 返回点的 player TAG 下所有属性
+                |         |
+                |         +----------------- 从 "player100" 这个点获取
+                |
+                +--------------------------- 获取 player 这个 TAG 下的属性
 ```
 
 更多信息，请参见 [FETCH PROP ON](4.fetch.md)。
@@ -66,14 +66,14 @@ FETCH PROP ON player "player100" YIELD properties(vertex);
 
 ```ngql
 LOOKUP ON player WHERE player.name == "Tony Parker" YIELD id(vertex);
-          ──┬───  ──────┬──────────────────────────  ──┬──────       
-            │           │          ┌───────────────────┘             
-            │           │          │                                 
-            │           │          └──────────── 返回查到点的 VID
-            │           │                                            
-            │           └─────────────────────── 过滤条件是属性 name 的值
-            │                                                        
-            └─────────────────────────────────── 根据点的 TAG player 查询
+          --+--- ------------------+---------------       ---+------
+            |                      |                         |
+            |                      |                         |
+            |                      |                         +---- 返回查到点的 VID
+            |                      |
+            |                      +------------ 过滤条件是属性 name 的值
+            |
+            +----------------------------------- 根据点的 TAG player 查询
 ```
 
 更多信息，请参见 [LOOKUP ON](5.lookup.md)。
@@ -94,16 +94,16 @@ LOOKUP ON player WHERE player.name == "Tony Parker" YIELD id(vertex);
 
 ```ngql
 GO 3 STEPS FROM "player102" OVER follow YIELD dst(edge);
-   ───┬───      ───┬───────      ─┬────       ──┬────── 
-      │            │              │   ┌─────────┘       
-      │            │              │   │                 
-      │            │              │   └── 返回最后一跳边的终点
-      │            │              │                     
-      │            │              └────── 从 follow 这个边[出方向]探索
-      │            │                                    
-      │            └───────────────────── 起点是 "player102"
-      │                                                 
-      └────────────────────────────────── 探索 3 步
+-----+---       --+-------       -+----       ---+-----
+     |            |               |              |
+     |            |               |              |
+     |            |               |              +--------- 返回最后一跳边的终点
+     |            |               |
+     |            |               +------ 从 follow 这个边的出方向探索
+     |            |
+     |            +--------------------- 起点是 "player102"
+     |
+     +---------------------------------- 探索 3 步
 ```
 
 更多信息，请参见 [GO](3.go.md)。
@@ -147,17 +147,17 @@ MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
 
 ```ngql
 FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
-     ──┬─────            ───────────┬────────── ───┬───      ────┬────
-       │           ┌────────────────┘          　   │　           │
-       │           │     ┌─────────────────────────┘             │
-       │           │     │                                        │
-       │           │     └───────── 经由所有类型的边出向探索         └─────　返回路径为 p 列
-       │           │                                              
-       │           └─────────────── 从给定的起点、终点 VID           
-       │                                                   
-       │    
-       │                                                    
-       └─────────────────────────── 查找最短路径
+-------+-----           -------+---------------- ---+--       ----+----
+       |                       |                    |             |
+       |                       |                    |             |
+       |                       |                    |             +---------- 返回路径为 p 列
+       |                       |                    |
+       |                       |                    +----------- 经由所有类型的边的出方向探索
+       |                       |    
+       |                       |
+       |                       +------------------ 从给定的起点、终点 VID
+       |
+       +--------------------------- 查找最短路径
 ```
 
 更多信息，请参见 [FIND PATH](6.find-path.md)。
@@ -173,14 +173,13 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
 **示例**：
 
 ```ngql
-GET SUBGRAPH 5 STEPS FROM "player101" YIELD VERTICES AS nodes, EDGES AS relationships;           
-             ───┬─── ─────┬──────────       ──────────────────────────┬──────────────── 
-                │         │                                           │
-                │         │                                           │
-                │         └─────── 从 "player101" 开始出发              └──── 返回所有的点、边
-                │                                 
-                └───────────────── 获取 5 步的探索
-                                               
+GET SUBGRAPH 5 STEPS FROM "player101" YIELD VERTICES AS nodes, EDGES AS relationships;
+             -----+- -----+--------         ------------------------+----------------
+                  |       |                                         |
+                  |       |                                         |
+                  |       +------- 从 "player101" 开始出发            +------------ 返回所有的点、边
+                  |
+                  +----------------- 获取 5 步的探索                                              
 ```
 
 更多信息，请参见 [GET SUBGRAPH](7.get-subgraph.md)。
