--- a/docs-2.0-zh/20.appendix/0.FAQ.md
+++ b/docs-2.0-zh/20.appendix/0.FAQ.md
@@ -199,6 +199,10 @@ Storage 服务在毫秒级时间内多次收到插入或者更新同一点或边
 
 上述报错表示当前版本不允许同时对一个点或者一条边进行并发操作。如出现此报错请重新执行操作命令。
 
+### 如何处理错误信息 `The maximum number of statements allowed has been exceeded` 和 `the maximum number of statements for Nebula is 512`
+
+这两个报错信息都是由于单条插入语句长度超过 `max_allowed_statements` 引起的，通过修改 `nebula-graphd.conf` 配置文件的 `etc` 目录下 `--max_allowed_statements` 参数项，能避免语句插入报错。
+
 ## 关于设计与功能
 
 ### 返回消息中 `time spent` 的含义是什么？
