--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -313,7 +313,7 @@ nebula> MATCH ()<-[e]-() \
 
 !!! compatibility "历史版本兼容性"
 
-    在 {{nebula.name}} 3.0.0 之前，匹配 Edge Type 的前提是 Edge type 本身有对应属性的索引，否则，用户无法基于 Edge Type 执行 `MATCH` 语句。从 {{nebula.name}} 3.0.0 开始，匹配 Edge Type 可以不创建索引，但需要使用 `LIMIT` 限制输出结果数量，并且必须指定边的方向。从 {{nebula.name}} 3.5.0 开始，无需为 Edge Type 创建索引或者使用`LIMIT`限制输出结果数量，即可使用`MATCH`语句匹配边。
+    在 {{nebula.name}} 3.0.0 之前，匹配 Edge Type 的前提是 Edge Type 本身有对应属性的索引，否则，用户无法基于 Edge Type 执行 `MATCH` 语句。从 {{nebula.name}} 3.0.0 开始，匹配 Edge Type 可以不创建索引，但需要使用 `LIMIT` 限制输出结果数量，并且必须指定边的方向。从 {{nebula.name}} 3.5.0 开始，无需为 Edge Type 创建索引或者使用`LIMIT`限制输出结果数量，即可使用`MATCH`语句匹配边。
 
 ```ngql
 nebula> MATCH ()-[e:follow]->() \
