Modify the description of graph pattern (#119)
* Modify the description of graph pattern

The upper and lower bounds of the graph pattern can be set.

* Update 2.match.md

* update

* update

* Update 3.graph-patterns.md

--- a/docs-2.0-en/3.ngql-guide/1.nGQL-overview/3.graph-patterns.md
+++ b/docs-2.0-en/3.ngql-guide/1.nGQL-overview/3.graph-patterns.md
@@ -130,20 +130,13 @@ The preceding example defines a path with a minimum length of 3 and a maximum le
 
 It describes a graph of either 4 vertices and 3 edges, 5 vertices and 4 edges, or 6 vertices and 5 edges, all connected in a single path.
 
-The lower bound can be omitted. For example, to describe paths of length 5 or less, use:
+You may specify either the upper limit or lower limit of the length range, or neither of them, for example:
 
 ```ngql
-(a)-[*..5]->(b)
+(a)-[*..5]->(b)   // The minimum length is 1 and the maximum length is 5.
+(a)-[*3..]->(b)   // The minimum length is 3 and the maximum length is infinity.
+(a)-[*]->(b)      // The minimum length is 1 and the maximum length is infinity.
 ```
-
-!!! note
-
-    The upper bound must be specified. The following are **NOT** accepted.
-
-    ```ngql
-    (a)-[*3..]->(b)
-    (a)-[*]->(b)
-    ```
 
 ## Assigning to path variables
 
