--- a/docs-2.0-en/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-en/3.ngql-guide/7.general-query-statements/2.match.md
@@ -469,16 +469,18 @@ nebula> MATCH (v:player{name:"Tim Duncan"}) -[*0]-> (v2) \
 
 ### Match variable-length paths
 
-You can use the `:<edge_type>*[minHop..maxHop]` pattern to match variable-length paths.`minHop` and `maxHop` are optional and default to 1
-and infinity respectively.
-
-!!! note
-
-    When setting bounds, at least one of `minHop` and `maxHop` exists.
+You can use the `:<edge_type>*[minHop..maxHop]` pattern to match variable-length paths.`minHop` and `maxHop` are optional and default to 1 and infinity respectively.
 
 !!! caution
 
-    If `maxHop` is not set, it may cause the Graph service to OOM, execute this command with caution.
+    If `maxHop` is not set, it may cause the Graph service to OOM. Execute this command with caution.
+
+| Parameter     | Description                                                                     |
+| :------- | :----------------------------------------------------------------------- |
+| `minHop` | Optional. `minHop` indicates the minimum length of the path, which must be a non-negative integer. The default value is 1.     |
+| `maxHop` | Optional. `maxHop` indicates the maximum length of the path, which must be a non-negative integer. The default value is infinity. |
+
+If neither `minHop` nor `maxHop` is specified, and only `:<edge_type>*` is set, the default values are applied to both, i.e., `minHop` is 1 and `maxHop` is infinity.
 
 ```ngql
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*]->(v2) \
