--- a/docs-2.0-zh/3.ngql-guide/1.nGQL-overview/3.graph-patterns.md
+++ b/docs-2.0-zh/3.ngql-guide/1.nGQL-overview/3.graph-patterns.md
@@ -130,15 +130,13 @@
 
 该模式描述了 4 点 3 边、5 点 4 边或 6 点 5 边组成的图。
 
-也可以忽略最小长度，只指定最大长度，例如：
+也可以指定长度范围的上限或下限，也可以两个都不指定，例如：
 
 ```ngql
-(a)-[*..5]->(b)
+(a)-[*..5]->(b)  // 最小长度为 1，最大长度为 5。
+(a)-[*3..]->(b)  // 最小长度为 3，最大长度为无穷大。
+(a)-[*]->(b)     // 最小长度为 1，最大长度为无穷大。
 ```
-
-!!! note
-
-    必须指定最大长度，**不支持**仅指定最小长度（`(a)-[*3..]->(b)`）或都不指定（`(a)-[*]->(b)`）。
 
 ## 路径变量
 
