--- a/docs-2.0-zh/7.data-security/4.ssl.md
+++ b/docs-2.0-zh/7.data-security/4.ssl.md
@@ -35,7 +35,7 @@
 
 ## 加密策略
 
- {{nebula.name}} 支持三种加密策略。加密涉及的具体进程请参见[详细说明](https://github.com/vesoft-inc/nebula/blob/a67d166b284cae1b534bf8d19c936ee38bf12e29/docs/rfcs/0001-ssl-transportation.md#usage-explanation)。
+ {{nebula.name}} 支持三种加密策略。
 
 - 对客户端、Graph 服务、Meta 服务和 Storage 服务之间的传输数据加密。
 
