modify contact information

--- a/docs-2.0-en/3.ngql-guide/9.space-statements/5.drop-space.md
+++ b/docs-2.0-en/3.ngql-guide/9.space-statements/5.drop-space.md
@@ -8,7 +8,7 @@
 
 !!! warning
 
-    After you execute `DROP SPACE`, even if the snapshot contains data of the graph space, the data of the graph space cannot be recovered. But if the value of `auto_remove_invalid_space` is set to `false`, contact the sales team to recover the data of the graph space. 
+    After you execute `DROP SPACE`, even if the snapshot contains data of the graph space, the data of the graph space cannot be recovered.
 
 ## Prerequisites
 
