--- a/docs-2.0-zh/3.ngql-guide/9.space-statements/5.drop-space.md
+++ b/docs-2.0-zh/3.ngql-guide/9.space-statements/5.drop-space.md
@@ -8,7 +8,7 @@
 
 !!! warning
 
-    执行`DROP SPACE`后，即使快照中存在该图空间的数据，该图空间的数据也无法恢复。但是如果`auto_remove_invalid_space`的值为`false`时，可联系商务人员恢复数据。
+    执行`DROP SPACE`后，即使快照中存在该图空间的数据，该图空间的数据也无法恢复。
 
 ## 前提条件
 
