--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md
@@ -12,7 +12,7 @@
 
 - 只支持升级 {{nebula.name}} {{operator.upgrade_from}} 至 {{operator.upgrade_to}} 版本。
 
-- 如需升级 {{nebula.name}} 企业版，[联系我们](https://yueshu.com.cn/contact)。
+- 如需升级 {{nebula.name}} 企业版，[联系我们](https://discuss-cdn.nebula-graph.com.cn/uploads/default/original/3X/d/1/d1e1b0e55e29776ee60e3f34c843474ec884393d.jpeg)。
 
 ## 前提条件
 
