--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.find-path.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/6.find-path.md
@@ -67,6 +67,7 @@ YIELD path as <alias>
 返回的路径格式类似于`(<vertex_id>)-[:<edge_type_name>@<rank>]->(<vertex_id)`。
 
 ```ngql
+# 查找并返回player102到team204的最短路径
 nebula> FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
 +--------------------------------------------+
 | p                                          |
@@ -76,6 +77,7 @@ nebula> FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
 ```
 
 ```ngql
+# 查找并返回带属性值的team204到player100的最短反向路径
 nebula> FIND SHORTEST PATH WITH PROP FROM "team204" TO "player100" OVER * REVERSELY YIELD path AS p;
 +--------------------------------------------------------------------------------------------------------------------------------------+
 | p                                                                                                                                    |
@@ -85,6 +87,7 @@ nebula> FIND SHORTEST PATH WITH PROP FROM "team204" TO "player100" OVER * REVERS
 ```
 
 ```ngql
+# 查找并返回起点为player100,player130而终点为player132,player133的18跳之内双向最短路径
 nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player133" OVER * BIDIRECT UPTO 18 STEPS YIELD path as p;
 +------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | p                                                                                                                                                                                              |
@@ -104,6 +107,7 @@ nebula> FIND SHORTEST PATH FROM "player100", "player130" TO "player132", "player
 
 
 ```ngql
+# 查找所有从player100到team204,并且degree为空或者大于等于0的路径
 nebula> FIND ALL PATH FROM "player100" TO "team204" OVER * WHERE follow.degree is EMPTY or follow.degree >=0 YIELD path AS p;
 +------------------------------------------------------------------------------+
 | p                                                                            |
@@ -116,6 +120,7 @@ nebula> FIND ALL PATH FROM "player100" TO "team204" OVER * WHERE follow.degree i
 ```
 
 ```ngql
+# 查找所有从player100到team204无环路径
 nebula> FIND NOLOOP PATH FROM "player100" TO "team204" OVER * YIELD path AS p;
 +--------------------------------------------------------------------------------------------------------+
 | p                                                                                                      |
