--- a/docs-2.0-zh/3.ngql-guide/3.data-types/9.type-conversion.md
+++ b/docs-2.0-zh/3.ngql-guide/3.data-types/9.type-conversion.md
@@ -7,6 +7,7 @@
 ## 示例
 
 ```ngql
+# 将列表拆分，并各自转换为布尔值显示。
 nebula> UNWIND [true, false, 'true', 'false', NULL] AS b \
         RETURN toBoolean(b) AS b;
 +----------+
@@ -23,6 +24,7 @@ nebula> UNWIND [true, false, 'true', 'false', NULL] AS b \
 | __NULL__ |
 +----------+
 
+# 将整数或字符串转换为浮点数。
 nebula> RETURN toFloat(1), toFloat('1.3'), toFloat('1e3'), toFloat('not a number');
 +------------+----------------+----------------+-------------------------+
 | toFloat(1) | toFloat("1.3") | toFloat("1e3") | toFloat("not a number") |
